--- a/public/index.html
+++ b/public/index.html
@@ -12,8 +12,8 @@
         />
 
         <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
-        <link rel="apple-touch-icon" sizes="192x192" href="%PUBLIC_URL%/icon_192x192.png" />
-        <link rel="apple-touch-icon" sizes="512x512" href="%PUBLIC_URL%/icon_512x512.png" />
+        <!-- <link rel="apple-touch-icon" sizes="192x192" href="%PUBLIC_URL%/icon_192x192.png" />
+        <link rel="apple-touch-icon" sizes="512x512" href="%PUBLIC_URL%/icon_512x512.png" /> -->
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="theme-color" content="#000000" />
         <!--
